<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sagb.mobisagb.LoginActivity"
    android:weightSum="1">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:src="@mipmap/ic_sagb"
        android:scaleType="fitCenter"
        android:layout_weight="0.19" />

    <EditText
        android:hint="@string/nom_d_utilisateur"
        android:id="@+id/username_et"
        android:paddingTop="90dp"
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/password_et"
        android:hint="@string/mot_de_passe"
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/connexion_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connexion"
        android:background="@drawable/sagb_btn_1"
        />


</LinearLayout>
