<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10sp"
    android:layout_marginRight="10sp"
    android:orientation="vertical"
    android:paddingTop="10sp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
       <TextView
           android:layout_width="@dimen/text_view_120"
           android:layout_height="wrap_content"

           android:text="@string/NumCertIA"/>

        <Spinner
            android:id="@+id/NumCertIA_sp"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:background="@drawable/edit_text"
            android:hint="@string/NumCertIA" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/text_view_120"
            android:layout_height="wrap_content"
            android:text="@string/ModeReglement"/>
        <Spinner
            android:id="@+id/modeReglement_sp"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text"
            android:hint="@string/ModeReglement" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/text_view_120"
            android:layout_height="wrap_content"
            android:text="@string/DateCertIA"/>
    <TextView
        android:id="@+id/dateCertIA"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_text"
        android:text="@string/DateCertIA"
        android:textAlignment="center" />
</LinearLayout>
<ListView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/DetIA_lv">

</ListView>

</LinearLayout>